// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render correctly with a text 1`] = `
<styled.label>
  myText
</styled.label>
`;

exports[`Label should render correctly with a text as a title 1`] = `
<styled.label
  title={true}
>
  myText
</styled.label>
`;

exports[`Label should show repository name as a title 1`] = `
<styled.label
  title={true}
>
  My Repository
</styled.label>
`;
